ingress/envoy.yaml
---
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: public_api_listener
      traffic_direction: INBOUND
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_json
                tracing:
                  custom_tags:
                    - tag: "x-user"
                      request_header:
                        name: "x-user"
                codec_type: auto
                access_log:
                  - name: envoy.file_access_log
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      retry_policy:
                        # not retrying on APP specific errors for now
                        # see  https://www.envoyproxy.io/docs/envoy/latest/faq/load_balancing/transient_failures.html#retries-in-grpc-services
                        retry_on: "refused-stream"
                        num_retries: 5

                      routes:
                        - match: { prefix: "/v1.Greeter/", grpc: {}}
                          route: { cluster: greeter.greeter, timeout: 20s, auto_host_rewrite: true }
                      response_headers_to_add:
                        - header:
                            key: "x-fast-request-id"
                            value: "%REQ(x-request-id)%"
                http_filters:
                  - name: envoy.grpc_json_transcoder
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                      proto_descriptor: "/etc/envoy/greeter_proto_v1_v1_proto_pb_combined.pb"
                      services: ["v1.Greeter"]
                      convert_grpc_status: true
                      print_options:
                        add_whitespace: true
                        always_print_primitive_fields: true
                        always_print_enums_as_ints: false
                        preserve_proto_field_names: true
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        # Envoy will call "Check" method in guardian to
                        # request authentication.
                        envoy_grpc: { cluster_name: greeter.greeter }
                        timeout: 5s
#                      transport_api_version: V3
                      include_peer_certificate: true
                      failure_mode_allow: true
                      status_on_error:
                        code: 503
                  # Traces for healthcheck requests should not be sampled.
                  - name: envoy.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: false
                      headers:
                        - name: ":path"
                          exact_match: "/uTae8Veph0-healthz"
                  - name: envoy.router
                    typed_config: {}

  clusters:
    - name: greeter.greeter
      connect_timeout: 1.25s
      type: strict_dns
      lb_policy: round_robin
      dns_lookup_family: V4_ONLY
      http2_protocol_options: {}
      load_assignment:
        cluster_name: greeter.greeter
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: greeter.greeter.svc
                      port_value: 5000
